--- a/Miny/MainWindow.xaml
+++ b/Miny/MainWindow.xaml
@@ -5,8 +5,26 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Miny"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="Minesweeper" Height="450" Width="800">
     <Grid>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="75" />
+            <RowDefinition Height="5" />
+            <RowDefinition />
+        </Grid.RowDefinitions>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="125" />
+            <ColumnDefinition />
+            <ColumnDefinition Width="125" />
+        </Grid.ColumnDefinitions>
+
+        <Button Name="btn" Background="LightGray" Height="50" Width="50" Grid.Column="1" BorderBrush="Gray" BorderThickness="3" Click="Start_button"> START </Button>
+        <Label BorderBrush="Gray" BorderThickness="3" FontSize="20" HorizontalAlignment="Right" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" VerticalAlignment="Center" Foreground="Red" Background="Black" Height="50" Width="100">99</Label>
+        <Label Name="Timer" BorderBrush="Gray" BorderThickness="3" FontSize="20" Grid.Column="2" HorizontalAlignment="Left" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" VerticalAlignment="Center" Foreground="Red" Background="Black" Height="50" Width="100">00:00</Label>
+        <Separator Grid.ColumnSpan="3" Grid.Row="1" />
         
+        
+
+
     </Grid>
 </Window>
